--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="social-links">
               <a href="https://twitter.com/aungakm19?s=09" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="https://www.facebook.com/aung.akm2000" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/aung_kg_myt/" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.instagram.com/aung_kg_myt" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://t.me/aungakm" class="telegram"><i class="bi bi-telegram"></i></a>
             </div>
         </div>
@@ -226,7 +226,7 @@
             <h3>Games</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4">
+        <div class="col-lg-3 col-md-4 my-4">
           <div class="icon-box">
             <i class="fas fa-plane-departure" style="color: #4233ff;"></i>
             <h3>Travel</h3>
@@ -235,92 +235,6 @@
       </div>
 
     </div><!-- End Interests -->
-
-    <!-- ======= Testimonials ======= -->
-    <div class="testimonials container">
-
-      <div class="section-title">
-        <h2>Testimonials</h2>
-      </div>
-
-      <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
-        <div class="swiper-wrapper">
-
-          <div class="swiper-slide">
-            <div class="testimonial-item">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
-            </div>
-          </div><!-- End testimonial item -->
-
-          <div class="swiper-slide">
-            <div class="testimonial-item">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
-            </div>
-          </div><!-- End testimonial item -->
-
-          <div class="swiper-slide">
-            <div class="testimonial-item">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
-            </div>
-          </div><!-- End testimonial item -->
-
-          <div class="swiper-slide">
-            <div class="testimonial-item">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
-            </div>
-          </div><!-- End testimonial item -->
-
-          <div class="swiper-slide">
-            <div class="testimonial-item">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
-            </div>
-          </div><!-- End testimonial item -->
-
-        </div>
-        <div class="swiper-pagination"></div>
-      </div>
-
-      <div class="owl-carousel testimonials-carousel">
-
-      </div>
-
-    </div><!-- End Testimonials  -->
-
   </section><!-- End About Section -->
 
   <!-- ======= Resume Section ======= -->
@@ -387,7 +301,7 @@
         <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-stretch my-3">
           <div class="icon-box">
             <div class="icon"><i class="fab fa-app-store"></i></div>
-            <h4><a href="">Web Application</a></h4>
+            <h4>Web Application</h4>
             <p>Dynamic Web App with Interactive Admin Panel</p>
           </div>
         </div>
@@ -395,7 +309,7 @@
         <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-stretch my-3">
           <div class="icon-box">
             <div class="icon"><i class="fas fa-file-signature"></i></div>
-            <h4><a href="">Custom Website Design</a></h4>
+            <h4>Custom Website Design</h4>
             <p>Creation website design upon your imagination with photoshop</p>
           </div>
         </div>
@@ -403,7 +317,7 @@
         <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-stretch my-3">
           <div class="icon-box">
             <div class="icon"><i class="fas fa-mobile-alt"></i></div>
-            <h4><a href="">Responsive Website</a></h4>
+            <h4>Responsive Website</h4>
             <p>Compatible Website On Any Type Of Screen Size</p>
           </div>
         </div>
@@ -411,7 +325,7 @@
         <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-stretch my-4 text-end">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Laravel Development</a></h4>
+            <h4>Laravel Development</h4>
             <p>Developing Web App With Laravel Framework</p>
           </div>
         </div>
@@ -444,54 +358,30 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://twitter.com/aungakm19?s=09" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.facebook.com/aung.akm2000" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/aung_kg_myt" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://t.me/aungakm" class="telegram"><i class="bi bi-telegram"></i></a>
             </div>
           </div>
         </div>
 
         <div class="col-md-6 d-flex align-items-stretch my-3">
           <div class="info-box">
-            <i class="bx bx-envelope"></i>
-            <h3>Email Me</h3>
-            <p>aung.akm17@gmail.com</p>
+            <a class="link" href="mailto:aun.akm17@gmail.com"><i class="bx bx-envelope"></i></a>
+            <a class="link" href="mailto:aun.akm17@gmail.com"><h3>Email Me</h3></a>
+            <p><a class="link" href="mailto:aun.akm17@gmail.com">aung.akm17@gmail.com</a></p>
+            
           </div>
         </div>
         <div class="col-md-6 d-flex align-items-stretch my-3">
           <div class="info-box">
-            <i class="bx bx-phone-call"></i>
-            <h3>Call Me</h3>
-            <p>+959 422555544</p>
+            <a class="link" href="tel:+959422555544"><i class="bx bx-phone-call"></i></a>
+            <a class="link" href="tel:+959422555544"><h3>Call Me</h3></a>
+            <p><a class="link" href="tel:+959422555544">+959 422555544</a></p>
           </div>
         </div>
       </div>
-
-      <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
-        <div class="row">
-          <div class="col-md-6 form-group">
-            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-          </div>
-          <div class="col-md-6 form-group mt-3 mt-md-0">
-            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-          </div>
-        </div>
-        <div class="form-group mt-3">
-          <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-        </div>
-        <div class="form-group mt-3">
-          <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-        </div>
-        <div class="my-3">
-          <div class="loading">Loading</div>
-          <div class="error-message"></div>
-          <div class="sent-message">Your message has been sent. Thank you!</div>
-        </div>
-        <div class="text-center"><button type="submit">Send Message</button></div>
-      </form>
-
     </div>
   </section><!-- End Contact Section -->
 
