--- a/index.html
+++ b/index.html
@@ -274,6 +274,8 @@
               <li><h4><em>Cinema Ticket Selling System (C#)<h5 class="text-white my-2 mx-2">Creation date : 2019</h5></em></h4></li>
               <li><h4><em>Food Ordering Web Application (HTML,CSS,PHP)<h5 class="text-white my-2 mx-2">Creation date : 2020</h5></em></h4></li>
               <li><h4><em>Online-Store Web Application (Laravel)<h5 class="text-white my-2 mx-2">Creation date : 2021</h5></em></h4></li>
+              <li><h4><em>Paris Fashion Shop Website Template (HTML,CSS,Bootstrap,JS)<h5 class="text-white my-2 mx-2">Creation date : 2021</h5></em></h4></li>
+              <li><h4><em>Restaurant Order Web Application (Laravel)<h5 class="text-white my-2 mx-2">Creation date : 2021</h5></em></h4></li>
             </ul>
           </div>
           <h3 class="resume-title my-5">Volunteering Experience</h3>
