--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title my-5">Education</h3>
           <div class="resume-item">
-            <h4>BSc (Hons) Computer Science, Yangon University(fouth batch)</h4>
+            <h4>BSc (Hons) Computer Science, Yangon University(fourth batch)</h4>
             <h4><em>Academic Year - <h5 class="text-white my-2">2016 - present (Second year Honours)</h5> </em></h4>
           </div>
           <h3 class="resume-title my-5">Centificate</h3>
